<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="login">Login</string>
    <string name="my_profile">Profile</string>
    <string name="sell">Sell</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="share">share</string>
    <string name="juggler">Welcome to Get Stuff</string>"
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>
    <string name="coming_soon">Coming Soon..</string>
    <string name="home">Home</string>
    <string name="product_name">Product name</string>
    <string name="feedback">Feedback</string>
    <string name="Welcome_to_GetStuff">Welcome to Juggler</string>
    <string name="intro">A platform for students to buy and sell old goods to other students within their college.</string>
    <string name="our_team">Our Team</string>
    <string name="a">"Name    :    Shubham Sisodia  \nUSN       :    9917103172 \nBranch  :    CSE \n"</string>
    <string name="b">"Name    :    Kishan Kr. Gupta \nUSN       :    9917103185 \nBranch  :    CSE"</string>
    <string name="c">"Name    :    Sanchit Raj   \nUSN       :    9917103193 \nBranch  :    CSE"</string>
    <string name="d">"Name    :    Sarthak Sahni   \nUSN       :    9917103194 \nBranch  :    CSE"</string>
    <string name="forgot_pass">Forgot password? Reset</string>
    <string name="go_back">Go Back</string>
    <string name="reset_pass">Reset Password</string>
</resources>
