<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SellFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="Purpose"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/purpose_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purpose"
            android:text="@string/intro"
            android:textSize="20dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/purpose_text"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"
            android:text="@string/our_team"
            android:textSize="30dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/shubh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/team"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/a"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/shubh_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/team"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/shubh_text"
            android:background="@drawable/shubh" />

        <TextView
            android:id="@+id/kishan_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/team"
            android:layout_marginTop="130dp"
            android:text="@string/b"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/kishan_image"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_below="@+id/team"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="127dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/kishan_text"
            android:background="@drawable/kishan" />

        <TextView
            android:id="@+id/sanchit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/team"
            android:layout_marginTop="250dp"
            android:text="@string/c"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/sanchit_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/team"
            android:layout_marginStart="65dp"
            android:layout_marginTop="245dp"
            android:layout_toEndOf="@+id/sanchit_text"
            android:background="@drawable/sanchit" />

        <TextView
            android:id="@+id/sarthak_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/team"
            android:layout_marginTop="370dp"
            android:text="@string/d"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/sarthak_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/team"
            android:layout_marginStart="45dp"
            android:layout_marginTop="365dp"
            android:layout_toEndOf="@+id/sarthak_text"
            android:background="@drawable/sarthak" />
    </RelativeLayout>
</ScrollView>